add line to create smaller version of cleaned data for testing, add EDA sections: foreign chars in movie title, review count per unique movie, and part of reviewdate

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 # Ignore huge local data files
 ReviewData/*
 imdbReviewsClean.csv
+imdbReviewsSmall.csv
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
